--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@primer/react-brand": "^0.31.0",
+    "flowbite-react": "^0.7.5",
     "framer-motion": "^11.0.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
