--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@primer/react-brand": "^0.31.0",
     "@tsparticles/react": "^3.0.0",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.7.5",
     "framer-motion": "^11.0.23",
+    "googleapis": "^134.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-calendar-api": "^2.3.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "tsparticles": "^3.3.0"
