--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@primer/react-brand": "^0.31.0",
     "@tsparticles/react": "^3.0.0",
+    "add-to-calendar-button": "^2.6.9",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.7.5",
     "framer-motion": "^11.0.23",
