--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@primer/react-brand": "^0.31.0",
     "@tsparticles/react": "^3.0.0",
     "add-to-calendar-button": "^2.6.9",
+    "animate.css": "^4.1.1",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.7.5",
     "framer-motion": "^11.0.23",
@@ -23,6 +24,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tsparticles": "^3.3.0"
   },
   "devDependencies": {
