--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "framer-motion": "^11.0.23",
     "googleapis": "^134.0.0",
     "react": "^18.2.0",
+    "react-animated-text": "^0.1.4",
     "react-dom": "^18.2.0",
     "react-google-calendar-api": "^2.3.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.0.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
+    "react-swiper": "^0.1.5",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.0",
     "tsparticles": "^3.3.0"
   },
   "devDependencies": {
